--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,7 @@
   
   --color-primary-light-9:#ecf5ff;
   --box-shadow:0px 12px 32px 4px rgba(0, 0, 0, 0.04),0px 8px 20px rgba(0, 0, 0, 0.08);
-  --box-shadow-light: 0px 0px 12px rgba(0, 0, 0, .12);;
+  --box-shadow-light: 0px 0px 12px rgba(0, 0, 0, .12);
   --box-shadow-lighter:0px 0px 6px rgba(0, 0, 0, 0.12);
   --text-color-primary:#303133;
   --color-white:#FFF;
