优化toolbar功能 新增历史记录功能

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@
   --color-success:#67c23a;
   --color-warning:#e6a23c;
   --color-danger:#f56c6c;
+  --disbled-color:#d3d3d3;
   
   --color-primary-light-9:#ecf5ff;
   --box-shadow:0px 12px 32px 4px rgba(0, 0, 0, 0.04),0px 8px 20px rgba(0, 0, 0, 0.08);
