调整框架结构 增加暗夜模式适配

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,4 +18,6 @@
   --color-white:#FFF;
   --color-info:rgb(144,147,153);
 }
-@import 'workflow.scss'
+@import 'dark.scss';
+@import 'workflow.scss';
+
