新增popover组件 toolbar-panel/index.vue 改用popover组件 node-container/index.vue textarea文本颜色修改计算方案让其更符合我们的预期 start节点样式改为所有节点样式

--- a/src/styles/workflow.scss
+++ b/src/styles/workflow.scss
@@ -65,13 +65,18 @@
     box-shadow: var(--box-shadow);
   }
   
+  .vue-flow__node{
+    >.node{
+      height: calc(100% - 10px);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  
   .vue-flow__node-start > .node{
     background: var(--vf-handle-success);
     color:var(--vf-node-text-selectable);
-    height: calc(100% - 10px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
   
   .vue-flow__node-step > .node{
