--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,11 +5,14 @@
   --bg-color-page:#f2f3f5;
   --bg-color:#FFF;
   --border-radius:4px;
+  --border-radius-round:20px;
+  --border-radius-body:10px;
   --color-primary:#409eff;
   --color-success:#67c23a;
   --color-warning:#e6a23c;
   --color-danger:#f56c6c;
   --disbled-color:#d3d3d3;
+  --mask-bg:rgba(0,0,0, 0.3);
   
   --color-primary-light-9:#ecf5ff;
   --box-shadow:0px 12px 32px 4px rgba(0, 0, 0, 0.04),0px 8px 20px rgba(0, 0, 0, 0.08);
@@ -19,6 +22,7 @@
   --color-white:#FFF;
   --color-info:rgb(144,147,153);
 }
+@import 'service.scss';
 @import 'dark.scss';
 @import 'colorpicker.scss';
 @import 'workflow.scss';
