--- a/src/styles/service.scss
+++ b/src/styles/service.scss
@@ -34,3 +34,23 @@ input,textarea{
     border-color: var(--color-primary);
   }
 }
+
+.setting-editor{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .setting-editor__label{
+      width:100px;
+      font-size: 13px;
+    }
+    .setting-editor__content{
+      height: 28px;
+      input{
+        line-height: 24px;
+        padding: 0 10px;
+      }
+    }
+  }
+.setting-item+.setting-item{
+  margin-top: 18px;
+}
