修正打包后引出的诸多bug 优化部分组件运行逻辑

--- a/src/styles/service.scss
+++ b/src/styles/service.scss
@@ -40,13 +40,15 @@ input,textarea{
     justify-content: center;
     align-items: center;
     .setting-editor__label{
-      width:100px;
+      width:80px;
       font-size: 13px;
     }
     .setting-editor__content{
       height: 28px;
+      width: 180px;
       input{
         line-height: 24px;
+        width: 100%;
         padding: 0 10px;
       }
     }
